2011-02-28  Dominique Dumont  <domi.dumont@free.fr> v 1.213

	* Fixed MANIFEST.SKIP to remove cruft shipped by Dist::Zilla. As
	  downstream packager, I was not amused :/

2011-02-23  Dominique Dumont  <domi.dumont@free.fr> v 1.212

	* Fixed Build.PL to include prereqs computed by Dist::Zilla

2011-02-21  Dominique Dumont  <domi.dumont@free.fr> v 1.211

	* *.t: fixed tests (Fix Debian bug #605792)
	* demo: split user and maintainer demo
	* removed config-edit-*. config-edit now has auto-completion and 
	  can be invoked with '-application ssh' or '-application sshd'
        * removed dependency on Parse::RecDescent
        * depend on Config::Model 1.234
        * Single backend was split in 3 (OpenSsh, Ssh and Sshd) to benefit
          from C::M::Backend::Any
           
2010-02-02  Dominique Dumont  <dominique.dumont@hp.com>

	* demo/demo.pl (my_system): new demo (requires Config::Model::Itself)

2010-01-24  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/models/Ssh/PortForward.pl: host and hostport are mandatory

2010-01-22  Dominique Dumont  <dominique.dumont@hp.com> v1.210

	* lib/Config/Model/OpenSsh.pm: Modified to read and write Port
	forward information from PortForward config class.

	* lib/Config/Model/models/Ssh/PortForward.pl: New configuration
	class to make ssh port forwarding configuration easier.

2010-01-18  Dominique Dumont  <dominique.dumont@hp.com> v1.209

	* lib/Config/Model/models/Sshd.pl: Added automatic migration of
	data from deprecated KeepAlive parameter to TCPKeepAlive
	parameter. This enables an automatic migration from old sshd
	config to new syntax.

	* lib/Config/Model/models/Ssh/HostElement.pl: Since ssh_config doc
	mentions that LocalForward and RemoteForward can be specified
	several times, these 2 parameters are changed from leaf to a list
	of leaf.

	* lib/Config/Model/models/Ssh.pl: As specifying Host block as list
	of patterns and content was not practical, the Host element in Ssh