@@ -25,13 +25,16 @@ use strict ;
 
 require 5.008;
 
+my %model_files = map { ($_, $_ ) } glob("lib/Config/Model/*.d/*") ;
+
 my $build = Module::Build->new
   (
    module_name   => 'Config::Model::OpenSsh',
    license       => 'lgpl',
    dist_author   => "Dominique Dumont (ddumont at cpan dot org)",
    dist_abstract => "OpenSsh configuration files graphical editor",
-
+   model_files => \%model_files ,
+ 
 ##{ $plugin->get_prereqs ##}
 
     meta_merge => {
@@ -46,4 +49,6 @@ my $build = Module::Build->new
 
 
 $build->add_build_element('pl');
+$build->add_build_element('model'); # see model_files above
+
 $build->create_build_script;
