@@ -1,5 +1,5 @@
 name    = Config-Model-OpenSsh
-version = 1.213
+version = 1.214
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
@@ -17,7 +17,6 @@ Config::Model::Backend::Augeas = 0
 
 [Prereqs / BuildRequires]
 Test::More        = 0
-Test::Warn        = 0.11 
 
 [@Filter]
 bundle = @Classic
